Fixed spacing of save button

--- a/public/style.css
+++ b/public/style.css
@@ -135,4 +135,6 @@ body {
 
 #save-settings-button {
     grid-area: 10/10/11/11;
+    align-self: center;
+    justify-self: center;
 }
